--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ DB_HOST=localhost
 DB_PORT=5433
 DB_USER=postgres
 DB_PASSWORD=root
-DB_DATABASE=test_development
+DB_DATABASE=template1
 
 SERVER_PORT=3000
 
 
-SECRET_TOKEN_PHRASE: 'secret_token_phrase'
+SECRET_TOKEN_PHRASE=secret_token_phrase
