added standard style guide

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.15",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "standard": "^16.0.4"
   }
 }
