update readme and env example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
-DB_CLIENT="pg"
-DB_HOST="localhost"
-DB_PORT=5433
-DB_USER="db_user"
-DB_PASSWORD="db_pass"
-DB_DATABASE="db_name"
+#Database configuration
+DB_CLIENT="pg | mysql | sqlite"
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DB_DATABASE=
 
-SERVER_PORT=3000
+#Server configuration
+SERVER_PORT=
 
-
-SECRET_TOKEN_PHRASE="token_secret"
+#Token Configuration
+SECRET_TOKEN_PHRASE=
