--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "login-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "start": "node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Guilherme Abrantes",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
