--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main/",
   "scripts": {
     "start": "node ./src/main/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Luis Sky",
@@ -20,6 +20,7 @@
     "pg": "^8.7.1"
   },
   "devDependencies": {
+    "jest": "^27.5.1",
     "standard": "^16.0.4"
   }
 }
