--- a/package.json
+++ b/package.json
@@ -8,11 +8,6 @@
     "dev": "jest --watch",
     "test": "jest"
   },
-  "standard": {
-    "env": [
-      "jest"
-    ]
-  },
   "keywords": [],
   "author": "Luis Sky",
   "license": "ISC",
@@ -20,13 +15,18 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.15",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.0.1",
     "pg": "^8.7.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.9.2",
+    "@types/validator": "^13.11.6",
     "jest": "^27.5.1",
-    "standard": "^16.0.4"
+    "ts-node-dev": "^2.0.0"
   }
 }
