--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Luis Sky",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^9.0.2",
@@ -23,10 +23,12 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.2",
     "@types/validator": "^13.11.6",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0"
   }
 }
