--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.2",
     "@types/validator": "^13.11.6",
+    "git-commit-msg-linter": "^5.0.4",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0"
