--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/main/server.js",
   "scripts": {
     "start": "node ./dist/src/main/server",
-    "dev": "jest --watch",
-    "test": "jest"
+    "dev:unity": "JEST_TYPE_TEST=unity jest --watch --runInBand",
+    "dev:integration": "JEST_TYPE_TEST=integration jest --watch --runInBand"
   },
   "keywords": [],
   "author": "Luis Sky",
