--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.2",
     "@types/validator": "^13.11.6",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^42.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
