--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,12 @@
     "extends": "standard-with-typescript",
     "parserOptions": {
       "project": "./tsconfig.json"
-    } 
+    },
+    "rules": {
+      "@typescript-eslint/consistent-type-imports": "off",
+      "@typescript-eslint/strict-boolean-expressions": "off",
+      "@typescript-eslint/no-extraneous-class": "off",
+      "@typescript-eslint/no-misused-promises": "off",
+      "@typescript-eslint/explicit-function-return-type": "off"
+    }
   }
