--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
       "@typescript-eslint/strict-boolean-expressions": "off",
       "@typescript-eslint/no-extraneous-class": "off",
       "@typescript-eslint/no-misused-promises": "off",
-      "@typescript-eslint/explicit-function-return-type": "off"
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "@typescript-eslint/consistent-type-definitions": "off"
     }
   }
