--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   database:
-    container_name: any_name
+    container_name: postgres_db
     image: "postgres"
     ports:
       - "${DB_PORT}:${DB_PORT}"
@@ -10,11 +10,11 @@ services:
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
-  web:
-    container_name: backend-api
-    build: .
-    ports:
-      - "${SERVER_PORT}:${SERVER_PORT}"
-    depends_on:
-      - database
-    command: npm start
+  # web:
+  #   container_name: backend-api
+  #   build: .
+  #   ports:
+  #     - "${SERVER_PORT}:${SERVER_PORT}"
+  #   depends_on:
+  #     - database
+  #   command: npm start
