--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Luis Sky",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
@@ -35,6 +36,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "jest": "^29.7.0",
+    "prisma": "^5.8.1",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0"
   }
