--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ SERVER_PORT=3333
 
 #Token Configuration
 SECRET_TOKEN_PHRASE=SUIHAI@!@!$@$@$sa98678SFASF
+
+#Prisma Configuration
+DATABASE_URL="postgresql://johnDoe:password@localhost:port/dbname?schema=public"
