refactor: change env SECRET_TOKEN_PHRASE's name to SECRET_TOKEN only

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 SERVER_PORT=3333
 
 #Token Configuration
-SECRET_TOKEN_PHRASE=SUIHAI@!@!$@$@$sa98678SFASF
+SECRET_TOKEN=SUIHAI@!@!$@$@$sa98678SFASF
 
 #Prisma Configuration
 DATABASE_URL="postgresql://johnDoe:password@localhost:port/dbname?schema=public"
